deeplearn/scheduler/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    SPACE

Grammar

Rule 0     S' -> schedule
Rule 1     schedule -> EVERY every_week
Rule 2     schedule -> EVERY every_day
Rule 3     schedule -> EVERY every_hour
Rule 4     schedule -> EVERY every_month
Rule 5     schedule -> EVERY every_minute
Rule 6     every_minute -> MINUTE
Rule 7     every_month -> MONTH ON DAY list AT time
Rule 8     every_week -> WEEKDAY AT time
Rule 9     every_week -> list AT time
Rule 10    every_week -> list
Rule 11    every_hour -> HOUR ON MINUTE list
Rule 12    every_day -> DAY AT list
Rule 13    every_day -> DAY AT time
Rule 14    list -> ( list_of_times )
Rule 15    list -> ( list_of_numbers )
Rule 16    list -> ( list_of_weekdays )
Rule 17    list -> ( list_of_weekdays_w_times )
Rule 18    list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY AT time
Rule 19    list_of_weekdays_w_times -> WEEKDAY AT time
Rule 20    list_of_weekdays -> list_of_weekdays , WEEKDAY
Rule 21    list_of_weekdays -> WEEKDAY
Rule 22    list_of_numbers -> list_of_numbers , NUMBER
Rule 23    list_of_numbers -> NUMBER
Rule 24    list_of_times -> list_of_times , time
Rule 25    list_of_times -> time
Rule 26    time -> NUMBER : NUMBER

Terminals, with rules where they appear

(                    : 14 15 16 17
)                    : 14 15 16 17
,                    : 18 20 22 24
:                    : 26
AT                   : 7 8 9 12 13 18 19
DAY                  : 7 12 13
EVERY                : 1 2 3 4 5
HOUR                 : 11
MINUTE               : 6 11
MONTH                : 7
NUMBER               : 22 23 26 26
ON                   : 7 11
SPACE                : 
WEEKDAY              : 8 18 19 20 21
error                : 

Nonterminals, with rules where they appear

every_day            : 2
every_hour           : 3
every_minute         : 5
every_month          : 4
every_week           : 1
list                 : 7 9 10 11 12
list_of_numbers      : 15 22
list_of_times        : 14 24
list_of_weekdays     : 16 20
list_of_weekdays_w_times : 17 18
schedule             : 0
time                 : 7 8 9 13 18 19 24 25

Parsing method: LALR

state 0

    (0) S' -> . schedule
    (1) schedule -> . EVERY every_week
    (2) schedule -> . EVERY every_day
    (3) schedule -> . EVERY every_hour
    (4) schedule -> . EVERY every_month
    (5) schedule -> . EVERY every_minute

    EVERY           shift and go to state 2

    schedule                       shift and go to state 1

state 1

    (0) S' -> schedule .



state 2

    (1) schedule -> EVERY . every_week
    (2) schedule -> EVERY . every_day
    (3) schedule -> EVERY . every_hour
    (4) schedule -> EVERY . every_month
    (5) schedule -> EVERY . every_minute
    (8) every_week -> . WEEKDAY AT time
    (9) every_week -> . list AT time
    (10) every_week -> . list
    (12) every_day -> . DAY AT list
    (13) every_day -> . DAY AT time
    (11) every_hour -> . HOUR ON MINUTE list
    (7) every_month -> . MONTH ON DAY list AT time
    (6) every_minute -> . MINUTE
    (14) list -> . ( list_of_times )
    (15) list -> . ( list_of_numbers )
    (16) list -> . ( list_of_weekdays )
    (17) list -> . ( list_of_weekdays_w_times )

    WEEKDAY         shift and go to state 12
    DAY             shift and go to state 13
    HOUR            shift and go to state 6
    MONTH           shift and go to state 9
    MINUTE          shift and go to state 14
    (               shift and go to state 7

    every_minute                   shift and go to state 3
    every_hour                     shift and go to state 4
    every_month                    shift and go to state 5
    list                           shift and go to state 8
    every_week                     shift and go to state 10
    every_day                      shift and go to state 11

state 3

    (5) schedule -> EVERY every_minute .

    $end            reduce using rule 5 (schedule -> EVERY every_minute .)


state 4

    (3) schedule -> EVERY every_hour .

    $end            reduce using rule 3 (schedule -> EVERY every_hour .)


state 5

    (4) schedule -> EVERY every_month .

    $end            reduce using rule 4 (schedule -> EVERY every_month .)


state 6

    (11) every_hour -> HOUR . ON MINUTE list

    ON              shift and go to state 15


state 7

    (14) list -> ( . list_of_times )
    (15) list -> ( . list_of_numbers )
    (16) list -> ( . list_of_weekdays )
    (17) list -> ( . list_of_weekdays_w_times )
    (24) list_of_times -> . list_of_times , time
    (25) list_of_times -> . time
    (22) list_of_numbers -> . list_of_numbers , NUMBER
    (23) list_of_numbers -> . NUMBER
    (20) list_of_weekdays -> . list_of_weekdays , WEEKDAY
    (21) list_of_weekdays -> . WEEKDAY
    (18) list_of_weekdays_w_times -> . list_of_weekdays_w_times , WEEKDAY AT time
    (19) list_of_weekdays_w_times -> . WEEKDAY AT time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 19
    WEEKDAY         shift and go to state 20

    list_of_times                  shift and go to state 17
    time                           shift and go to state 18
    list_of_numbers                shift and go to state 22
    list_of_weekdays               shift and go to state 16
    list_of_weekdays_w_times       shift and go to state 21

state 8

    (9) every_week -> list . AT time
    (10) every_week -> list .

    AT              shift and go to state 23
    $end            reduce using rule 10 (every_week -> list .)


state 9

    (7) every_month -> MONTH . ON DAY list AT time

    ON              shift and go to state 24


state 10

    (1) schedule -> EVERY every_week .

    $end            reduce using rule 1 (schedule -> EVERY every_week .)


state 11

    (2) schedule -> EVERY every_day .

    $end            reduce using rule 2 (schedule -> EVERY every_day .)


state 12

    (8) every_week -> WEEKDAY . AT time

    AT              shift and go to state 25


state 13

    (12) every_day -> DAY . AT list
    (13) every_day -> DAY . AT time

    AT              shift and go to state 26


state 14

    (6) every_minute -> MINUTE .

    $end            reduce using rule 6 (every_minute -> MINUTE .)


state 15

    (11) every_hour -> HOUR ON . MINUTE list

    MINUTE          shift and go to state 27


state 16

    (16) list -> ( list_of_weekdays . )
    (20) list_of_weekdays -> list_of_weekdays . , WEEKDAY

    )               shift and go to state 28
    ,               shift and go to state 29


state 17

    (14) list -> ( list_of_times . )
    (24) list_of_times -> list_of_times . , time

    )               shift and go to state 30
    ,               shift and go to state 31


state 18

    (25) list_of_times -> time .

    )               reduce using rule 25 (list_of_times -> time .)
    ,               reduce using rule 25 (list_of_times -> time .)


state 19

    (23) list_of_numbers -> NUMBER .
    (26) time -> NUMBER . : NUMBER

    )               reduce using rule 23 (list_of_numbers -> NUMBER .)
    ,               reduce using rule 23 (list_of_numbers -> NUMBER .)
    :               shift and go to state 32


state 20

    (21) list_of_weekdays -> WEEKDAY .
    (19) list_of_weekdays_w_times -> WEEKDAY . AT time

    )               reduce using rule 21 (list_of_weekdays -> WEEKDAY .)
    ,               reduce using rule 21 (list_of_weekdays -> WEEKDAY .)
    AT              shift and go to state 33


state 21

    (17) list -> ( list_of_weekdays_w_times . )
    (18) list_of_weekdays_w_times -> list_of_weekdays_w_times . , WEEKDAY AT time

    )               shift and go to state 34
    ,               shift and go to state 35


state 22

    (15) list -> ( list_of_numbers . )
    (22) list_of_numbers -> list_of_numbers . , NUMBER

    )               shift and go to state 36
    ,               shift and go to state 37


state 23

    (9) every_week -> list AT . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 39

state 24

    (7) every_month -> MONTH ON . DAY list AT time

    DAY             shift and go to state 40


state 25

    (8) every_week -> WEEKDAY AT . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 41

state 26

    (12) every_day -> DAY AT . list
    (13) every_day -> DAY AT . time
    (14) list -> . ( list_of_times )
    (15) list -> . ( list_of_numbers )
    (16) list -> . ( list_of_weekdays )
    (17) list -> . ( list_of_weekdays_w_times )
    (26) time -> . NUMBER : NUMBER

    (               shift and go to state 7
    NUMBER          shift and go to state 38

    time                           shift and go to state 43
    list                           shift and go to state 42

state 27

    (11) every_hour -> HOUR ON MINUTE . list
    (14) list -> . ( list_of_times )
    (15) list -> . ( list_of_numbers )
    (16) list -> . ( list_of_weekdays )
    (17) list -> . ( list_of_weekdays_w_times )

    (               shift and go to state 7

    list                           shift and go to state 44

state 28

    (16) list -> ( list_of_weekdays ) .

    $end            reduce using rule 16 (list -> ( list_of_weekdays ) .)
    AT              reduce using rule 16 (list -> ( list_of_weekdays ) .)


state 29

    (20) list_of_weekdays -> list_of_weekdays , . WEEKDAY

    WEEKDAY         shift and go to state 45


state 30

    (14) list -> ( list_of_times ) .

    $end            reduce using rule 14 (list -> ( list_of_times ) .)
    AT              reduce using rule 14 (list -> ( list_of_times ) .)


state 31

    (24) list_of_times -> list_of_times , . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 46

state 32

    (26) time -> NUMBER : . NUMBER

    NUMBER          shift and go to state 47


state 33

    (19) list_of_weekdays_w_times -> WEEKDAY AT . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 48

state 34

    (17) list -> ( list_of_weekdays_w_times ) .

    $end            reduce using rule 17 (list -> ( list_of_weekdays_w_times ) .)
    AT              reduce using rule 17 (list -> ( list_of_weekdays_w_times ) .)


state 35

    (18) list_of_weekdays_w_times -> list_of_weekdays_w_times , . WEEKDAY AT time

    WEEKDAY         shift and go to state 49


state 36

    (15) list -> ( list_of_numbers ) .

    $end            reduce using rule 15 (list -> ( list_of_numbers ) .)
    AT              reduce using rule 15 (list -> ( list_of_numbers ) .)


state 37

    (22) list_of_numbers -> list_of_numbers , . NUMBER

    NUMBER          shift and go to state 50


state 38

    (26) time -> NUMBER . : NUMBER

    :               shift and go to state 32


state 39

    (9) every_week -> list AT time .

    $end            reduce using rule 9 (every_week -> list AT time .)


state 40

    (7) every_month -> MONTH ON DAY . list AT time
    (14) list -> . ( list_of_times )
    (15) list -> . ( list_of_numbers )
    (16) list -> . ( list_of_weekdays )
    (17) list -> . ( list_of_weekdays_w_times )

    (               shift and go to state 7

    list                           shift and go to state 51

state 41

    (8) every_week -> WEEKDAY AT time .

    $end            reduce using rule 8 (every_week -> WEEKDAY AT time .)


state 42

    (12) every_day -> DAY AT list .

    $end            reduce using rule 12 (every_day -> DAY AT list .)


state 43

    (13) every_day -> DAY AT time .

    $end            reduce using rule 13 (every_day -> DAY AT time .)


state 44

    (11) every_hour -> HOUR ON MINUTE list .

    $end            reduce using rule 11 (every_hour -> HOUR ON MINUTE list .)


state 45

    (20) list_of_weekdays -> list_of_weekdays , WEEKDAY .

    )               reduce using rule 20 (list_of_weekdays -> list_of_weekdays , WEEKDAY .)
    ,               reduce using rule 20 (list_of_weekdays -> list_of_weekdays , WEEKDAY .)


state 46

    (24) list_of_times -> list_of_times , time .

    )               reduce using rule 24 (list_of_times -> list_of_times , time .)
    ,               reduce using rule 24 (list_of_times -> list_of_times , time .)


state 47

    (26) time -> NUMBER : NUMBER .

    $end            reduce using rule 26 (time -> NUMBER : NUMBER .)
    )               reduce using rule 26 (time -> NUMBER : NUMBER .)
    ,               reduce using rule 26 (time -> NUMBER : NUMBER .)


state 48

    (19) list_of_weekdays_w_times -> WEEKDAY AT time .

    )               reduce using rule 19 (list_of_weekdays_w_times -> WEEKDAY AT time .)
    ,               reduce using rule 19 (list_of_weekdays_w_times -> WEEKDAY AT time .)


state 49

    (18) list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY . AT time

    AT              shift and go to state 52


state 50

    (22) list_of_numbers -> list_of_numbers , NUMBER .

    )               reduce using rule 22 (list_of_numbers -> list_of_numbers , NUMBER .)
    ,               reduce using rule 22 (list_of_numbers -> list_of_numbers , NUMBER .)


state 51

    (7) every_month -> MONTH ON DAY list . AT time

    AT              shift and go to state 53


state 52

    (18) list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY AT . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 54

state 53

    (7) every_month -> MONTH ON DAY list AT . time
    (26) time -> . NUMBER : NUMBER

    NUMBER          shift and go to state 38

    time                           shift and go to state 55

state 54

    (18) list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY AT time .

    )               reduce using rule 18 (list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY AT time .)
    ,               reduce using rule 18 (list_of_weekdays_w_times -> list_of_weekdays_w_times , WEEKDAY AT time .)


state 55

    (7) every_month -> MONTH ON DAY list AT time .

    $end            reduce using rule 7 (every_month -> MONTH ON DAY list AT time .)

